--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,13 @@
-# dependencies
 /node_modules
 /.pnp
 .pnp.js
 
-# testing
 /coverage
 
-# production
 /build
 
-# misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -22,3 +19,5 @@ yarn-error.log*
 *.old
 node_modules/.cache/.eslintcache
 *.pack
+node_modules*
+*node_modules
