--- a/package.json
+++ b/package.json
@@ -4,16 +4,26 @@
   "private": true,
   "dependencies": {
     "axios": "^0.26.1",
+    "bcryptjs": "^2.4.3",
+    "buffer": "^6.0.3",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
     "dayjs": "^1.11.0",
+    "jsonwebtoken": "^8.5.1",
+    "jws": "^4.0.0",
     "jwt-decode": "^3.1.2",
     "jwt-encode": "^1.0.1",
-    "miragejs": "^0.1.43",
-    "mockman-js": "^1.1.5",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0",
+    "miragejs": "^0.1.41",
+    "mockman-js": "^1.0.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "uuid": "^8.3.2"
+    "stream": "0.0.2",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.4",
+    "uuid": "^8.3.2",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
