--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "start": "REACT_APP_JWT_SECRET=JacketEx react-scripts start",
-    "build": "react-scripts build",
+    "build": "REACT_APP_JWT_SECRET=JacketEx react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
